# shellymetry

./: .gitignore  Cargo.toml  Makefile  README.md
.circleci/: config.yml
.github/: dependabot.yml
fixtures/: config.json  plug.json
src/: config.rs  flags.rs  main.rs  runner.rs  server.rs  shelly.rs
