[package]
name = "shellymetry"
description = "Export shelly.cloud data to Prometheus"
version = "0.1.0"
authors = ["dmathieu <damien.mathieu@auth0.com>"]
edition = "2018"
repository = "https://github.com/dmathieu/shellymetry"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
config = "0.11"
hyper = { version = "0.14", features = ["full"] }
opentelemetry = { version = "0.15", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.8", features = ["grpc-sys", "tokio", "openssl-vendored"] }
opentelemetry-prometheus = "0.8.0"
prometheus = "0.12"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.7.1", features = ["full"] }

[dev-dependencies]
httptest = "0.15.2"
